...
          children: [
            Align(
              alignment: Alignment.topRight,
              child: TextButton(
                onPressed: () => context.go('/sms_permission'),
                child: Text(
                  'Skip',
                  style: AppTypography.bodyLg.copyWith(color: AppColors.onSurfaceVariant),
                ),
              ),
            ),
            
            Expanded(
...
